# ProjetoTCC-Bookstation

./: .breakpoints  .flaskenv  .replit  README.md  app.py  config.py  database.py  funcoes_auxiliares.py  pyproject.toml  requirements.txt
controladores/: auxiliar_generos.py  busca_livros_controlador.py  crud_livros_controlador.py  generos_controlador.py  livros_controlador.py  usuarios_controlador.py
migrations/versions/: 03735e823e49_.py  070537554063_.py  537d5aa584a8_.py  a62be209250d_.py  ed7af4717fad_.py
modelos/: busca_livro_modelo.py  formularios_modelo.py  listas_livros_modelo.py  livros_generos_modelo.py  usuarios_listas_modelo.py  usuarios_modelo.py  usuarios_preferencias_modelo.py
rotas/: busca_livros_bp.py  crud_livros_bp.py  livros_bp.py  usuarios_bp.py
static/: estilo.css  funcoes.js
static/css/: estilo.css
templates/: base.html  busca_livros.html  busca_livros_genero.html  cadastrar_usuario.html  erro.html  estilo.css  index.html  indice.html  login_usuario.html  pagina_livro.html  pagina_usuario.html
tests/: conftest.py  test_app.py
